--- a/src/components/Page.module.css
+++ b/src/components/Page.module.css
@@ -20,6 +20,19 @@
 
   font-weight: bold;
   font-size: 19.8px;
+
+  position: fixed;
+  z-index: 1;
+  background: white;
+}
+
+.scrollarea {
+  width: 100%;
+  height: 100%;
+  max-height: calc(100vh - 40px);
+  margin-top: 40px;
+  flex: 1;
+  overflow-y: scroll !important;
 }
 
 .content {
